<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/name_english"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="16pt"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:contentDescription="@string/lbl_hanuman_logo"
        app:srcCompat="@drawable/logo_hanuman" />

    <Button
        android:id="@+id/btnExcel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorAccent"
        android:text="@string/lblGetExcelDataActivity"
        android:textColor="@color/colorSaffron" />

</LinearLayout>
