<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SplashScreenActivity">

    <!-- Image view for Logo -->
    <ImageView
        android:id="@+id/imgCompanyLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_hanuman" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:rotation="-12"
        android:text=   "@string/app_name_hindi"
        android:textColor="@color/colorSaffron"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/copyrightText" />

    </RelativeLayout>


</LinearLayout>