<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        style="@style/MyCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:orientation="vertical">
            <!-- top bar with user profile, name, and date of the post -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="6dp"
                android:padding="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <TextView
                        android:id="@+id/label_code_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:textSize="16sp"
                        android:text="@string/label_code_no" />

                    <TextView
                        android:id="@+id/sms_code_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:padding="2dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="01" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/label_name_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:textSize="16sp"
                            android:text="@string/label_name_text" />
                        <TextView
                        android:id="@+id/sms_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:padding="2dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="@string/app_name" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/label_mobile_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:textSize="16sp"
                            android:text="@string/label_mobile_no" />

                        <TextView
                            android:id="@+id/sms_mobile_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:padding="2dp"
                            tools:text="999999999999"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/label_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="2dp"
                            android:textSize="16sp"
                            android:text="@string/label_amount" />

                        <TextView
                            android:id="@+id/sms_amount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="6dp"
                            android:padding="2dp"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:text="1950"
                            />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/sms_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:textStyle="bold"
                        tools:text="This is a text message body in this place we can show the Text message that contains the descriptive message about the monthly Payment Reminders "/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>